--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 xmltodict>=0.12
 requests>=2.21
-datacite @ git+https://github.com/caltechlibrary/datacite.git@doi-mint-enhance#egg=datacite
+datacite @ git+https://github.com/caltechlibrary/datacite.git@rest-api#egg=datacite
